--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -30,3 +30,6 @@
       var dpath = '{dpath}';
       var sn_path_prefix = '{-path_prefix-}';
     //--></script>
+    <!-- IF IMPERSONATING -->
+      <div style="text-align: center" class="warning">{IMPERSONATING}</div>
+    <!-- ENDIF -->
