fix-FLT-34a3: Added more check for fleet sending

--- a/design/templates/OpenGame/fleet2.tpl.html
+++ b/design/templates/OpenGame/fleet2.tpl.html
@@ -60,7 +60,7 @@ var fleet_slide_changing = false;
   </table>
 <br />
 
-  <table id="resTable" border="0" cellpadding="0" cellspacing="0"><tbody>
+  <table id="resTable" border="0" cellpadding="0" cellspacing="0" style="display: none;"><tbody>
     <tr class="c_c">
       <th>{L_sys_resources}</th>
       <th>{L_fl_on_stores}</th>
