--- a/design/templates/OpenGame/left_menu.tpl.html
+++ b/design/templates/OpenGame/left_menu.tpl.html
@@ -73,7 +73,7 @@
     <tr><td><a href="search.php" id="lm_search">{L_Search}</a></td></tr>
 
     <tr><th>{L_navig}</th></tr>
-    <tr><td><a href="stat.php?start=%7Buser_rank%7D">{L_Statistics}</a></td></tr>
+    <tr><td><a href="stat.php">{L_Statistics}</a></td></tr>
     <tr><td><a href="records.php">{L_Records}</a></td></tr>
     <tr><td><a href="server_info.php">{L_lm_server_info}</a></td></tr>
     <tr><td><a href="banned.php">{L_lm_banned}</a></td></tr>
