feat-ECO-34a5: Hangar code entirly rewrited. Missiles rebalanced

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -7,21 +7,21 @@ var eco_bld_style_probe;
 
 language = 
 {
-  eco_que_empty: '{LA_eco_que_empty}',
+//  eco_que_empty: '{LA_eco_que_empty}',
   level: '{LA_level}',
   level_short: '{LA_sys_level_short}',
   bld_create: '{LA_bld_create}',
   bld_destroy: '{LA_bld_destroy}',
   construction_time: '{LA_ConstructionTime}',
-  eco_price: '{L_eco_price}',
-  eco_left: '{L_eco_left}',
-  eco_left_fleet: '{L_sys_fleet_and}',
+  eco_price: '{LA_eco_price}',
+  eco_left: '{LA_eco_left}',
+  eco_left_fleet: '{LA_sys_fleet_and}',
 
-  sys_resources: '{L_sys_resources}',
-  sys_metal: '{L_sys_metal}',
-  sys_crystal: '{L_sys_crystal}',
-  sys_deuterium: '{L_sys_deuterium}',
-  sys_energy: '{L_sys_energy}'
+  sys_resources: '{LA_sys_resources}',
+  sys_metal: '{LA_sys_metal}',
+  sys_crystal: '{LA_sys_crystal}',
+  sys_deuterium: '{LA_sys_deuterium}',
+  sys_energy: '{LA_sys_energy}'
 };
 
 planet =
