--- a/design/templates/OpenGame/eco_queue.tpl.html
+++ b/design/templates/OpenGame/eco_queue.tpl.html
@@ -17,7 +17,7 @@ sn_timers.unshift(
   'start_time': {TIME_NOW},
   'options':
   {
-    'msg_done': language['eco_que_empty'], 
+    'msg_done': '{LA_eco_que_empty}',//language['eco_que_empty'],
     // 'url': document.location.href,
     'template': '<div class="que_item fl" title="[UNIT_NAME]">\
       <span class="unit_picture"><img src="{-path_prefix-}{dpath}gebaeude/[UNIT_ID].gif" align="top" width="100%" height="100%"></span>\
