--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -122,7 +122,7 @@ uni_row[{galaxyrow.PLANET_NUM}] =
 
 <table width=569><tbody>
   <tr><th class="c_l" colspan="8">
-    <span class="fl">{L_sys_galaxy} {galaxy} <span class="ok">{GALAXY_NAME}</span> <a class="link" href="galaxy.php?mode=name&galaxy={galaxy}&system=0"><!-- IF GALAXY_NAME -->{L_uni_rename}<!-- ELSE -->{L_uni_to_name}<!-- ENDIF --></a></span>
+    <span class="fl">{L_sys_galaxy}&nbsp;{galaxy} <span class="ok">{GALAXY_NAME}</span>&nbsp;<a class="link" href="galaxy.php?mode=name&galaxy={galaxy}&system=0"><!-- IF GALAXY_NAME -->{L_uni_rename}<!-- ELSE -->{L_uni_to_name}<!-- ENDIF --></a></span>
     <span class="fr ok link" style="cursor: pointer;" onmouseout='popup_hide();' onmouseover='popup_show("\
       <table>\
       <tr><td class=c colspan=2>{L_sys_planet}</td></tr>\
@@ -146,7 +146,7 @@ uni_row[{galaxyrow.PLANET_NUM}] =
   </th></tr>
 
   <tr><th class="c_l" colspan=8>
-    <span class="fl">{L_sys_system} [{galaxy}:{system}] <span class="ok">{SYSTEM_NAME}</span> <a class="link" href="galaxy.php?mode=name&galaxy={galaxy}&system={system}"><!-- IF SYSTEM_NAME -->{L_uni_rename}<!-- ELSE -->{L_uni_to_name}<!-- ENDIF --></a></span>
+    <span class="fl">{L_sys_system}&nbsp;[{galaxy}:{system}] <span class="ok">{SYSTEM_NAME}</span>&nbsp;<a class="link" href="galaxy.php?mode=name&galaxy={galaxy}&system={system}"><!-- IF SYSTEM_NAME -->{L_uni_rename}<!-- ELSE -->{L_uni_to_name}<!-- ENDIF --></a></span>
     <span class="fr"><!-- IF planets -->{L_gal_planets} {planets}<!-- ELSE -->{L_gal_planetNone}<!-- ENDIF --></span>
   </th></tr>
 
