--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -1,57 +1,127 @@
 <!-- NAVBAR START -->
 
 <div id="sn_navbar">
-  <table width="700px" cellpadding="0" cellspacing="0" class="header c_c" id="resources"><tbody>
+  <table cellpadding="0" cellspacing="0" class="header c_c" id="resources"><tbody>
     <tr class="c_c">
-      <th colspan=7>
+      <th>
         <select class="fl" style="margin-right: 20px" size="1" onchange="window.location.href = window.location.pathname + this.options[this.selectedIndex].value;">
           <!-- BEGIN topnav_planets -->
             <option{topnav_planets.SELECTED} value="?cp={topnav_planets.ID}&mode={TOPNAV_MODE}&re=0">{topnav_planets.NAME}&nbsp;{topnav_planets.COORDS}
           <!-- END topnav_planets -->
         </select>
 
-        {DATE_TEXT}<span id="top_time">{TIME_TEXT}</span>
-
-        <span class="fr" style="margin-left: 20px" >{L_top_online} [{USERS_ONLINE}/{USERS_TOTAL}]</span>
-      </td>
+        <span style="margin: auto;">{DATE_TEXT}<span id="top_time">{TIME_TEXT}</span></span>&nbsp;<span class="fr" style="margin-left: 20px" >{L_top_online} [{USERS_ONLINE}/{USERS_TOTAL}]</span>
+      </th>
     </tr>
 
-    <tr class="ñ_ñ">
-      <td width="150">{L_sys_expeditions}</td>
-      <td width="150">{L_sys_fleets}</td>
-      <td width="150">{L_qst_quests}</td>
-      <td width="150"><A HREF="dark_matter.php"><img src="{dpath}images/dm_klein_2.jpg" border="0" height="22" width="42" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}"></A></td>
-      <td width="150"><A HREF="messages.php"><img src="{dpath}images/message.gif" border="0" height="22" width="42" alt="{L_Message}" title="{L_Message}"></A></td>
-    </tr>
+    <tr>
+      <td class="c_c">
+<!-- div style1="width: 140px" -->
+        <!-- BOF Nav Bar Left block -->
+        <div class="fl">
 
-    <tr class="c_c">
-      <td id="topnav_expedition_counter_total">
-        <a href="flying_fleets.php"><span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}</a>
-      </td>
-      <td id='topnav_fleet_counter_total'>
-        <a href="flying_fleets.php"><span id='topnav_fleet_counter'>{TOPNAV_FLEETS_FLYING}</span>/{TOPNAV_FLEETS_TOTAL}</a>
-      </td>
-      <td><a href="quest.php">{TOPNAV_QUEST_COMPLETE}/{C_quest_total}</a></td>
-      <td class="ok">{TOPNAV_DARK_MATTER}</td>
+          <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
+          <!-- INCLUDE eco_queue -->
+          <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;">
+            <a href="buildings.php?mode=research">
+              <img style="position: absolute; left: 25%; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/build_tech.png" height="100%" alt="{L_Research}" title="{L_Research}">
+              <!-- IF $QUE_NOT_EMPTY -->
+              <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
+                <div id="topnav_{QUE_ID}"></div>
+                <div id="topnav_{QUE_ID}_timer" style="color: lime"></div>
+                <div>{L_sys_total_time}</div>
+                <div id="topnav_{QUE_ID}_total" style="color: red"></div>
+                <div style="display: none;" id="topnav_{QUE_ID}_que"></div>
+              </span>
+              <!-- ELSE -->
+              <span style="width: 100%; position: absolute; left: 0; top: 40%;" class="alpha50">
+                {L_eco_que_empty}
+              </span>
+              <!-- ENDIF -->
+            </a>
+          </div>
 
-      <td>
-        <!-- IF TOPNAV_MESSAGES_ALL -->
-          <a href="messages.php"><blink>[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</blink></a>
-          <!-- IF TOPNAV_MESSAGES_PLAYER + TOPNAV_MESSAGES_ALLIANCE + TOPNAV_MESSAGES_ADMIN -->
-            <!-- IF TOPNAV_MESSAGES_ADMIN -->&nbsp;<a href="messages.php?mode=show&message_class={D_MSG_TYPE_ADMIN}"><span class="msg_admin">[{TOPNAV_MESSAGES_ADMIN}]</span></a><!-- ENDIF -->
-            <!-- IF TOPNAV_MESSAGES_PLAYER -->&nbsp;<a href="messages.php?mode=show&message_class={D_MSG_TYPE_PLAYER}"><span class="mnl_joueur">[{TOPNAV_MESSAGES_PLAYER}]</span></a><!-- ENDIF -->
-            <!-- IF TOPNAV_MESSAGES_ALLIANCE && ! TOPNAV_ALLY -->&nbsp;<a href="messages.php?mode=show&message_class={D_MSG_TYPE_ALLIANCE}"><span class="mnl_alliance">[{TOPNAV_MESSAGES_ALLIANCE}]</span></a><!-- ENDIF -->
-          <!-- ENDIF -->
-        <!-- ELSE -->
-          <a href="messages.php">0</a>
-        <!-- ENDIF -->
+        </div>
+        <!-- EOF Nav Bar Left block -->
+
+        <!-- BOF Nav Bar Middle block -->
+        <div style="display: inline-block; margin: auto;">
+
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="flying_fleets.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{dpath}gebaeude/{D_TECH_EXPEDITION}.gif" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
+              <span style="position: absolute; right: 0; bottom: 0;" id="topnav_expedition_counter_total" class="icon_alpha">
+                <span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}
+              </span>
+            </a>
+          </div>
+
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="flying_fleets.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/icon_fleet_own.png" height="100%" alt="{L_sys_fleets}" title="{L_sys_fleets}">
+              <span style="position: absolute; right: 0; bottom: 0;" id="topnav_fleet_counter_total" class="icon_alpha">
+                <span id='topnav_fleet_counter'>{TOPNAV_FLEETS_FLYING}</span>/{TOPNAV_FLEETS_TOTAL}
+              </span>
+            </a>
+          </div>
+
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="quest.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/icon_quest.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
+              <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha">
+                {TOPNAV_QUEST_COMPLETE}/{C_quest_total}
+              </span>
+            </a>
+          </div>
+
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="messages.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/icon_mail_64x64.png" width="100%" alt="{L_Message}" title="{L_Message}">
+              <div style="position: absolute; left: 0px; bottom: 0px; width: 100%; text-align: center;" class="">
+                <!-- IF TOPNAV_MESSAGES_ALL --><blink>[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</blink><!-- ELSE -->0<!-- ENDIF -->
+              </div>
+            </a>
+            <!-- IF TOPNAV_MESSAGES_ADMIN -->
+            <a href="messages.php?mode=show&message_class={D_MSG_TYPE_ADMIN}">
+              <span style="width: 100%; position: absolute; right: 0; top: 0;" class=""><span class="msg_admin">[&nbsp;{TOPNAV_MESSAGES_ADMIN}&nbsp;]</span></span>
+            </a>
+            <!-- ENDIF -->
+            <!-- IF TOPNAV_MESSAGES_PLAYER -->
+            <a href="messages.php?mode=show&message_class={D_MSG_TYPE_PLAYER}">
+              <span style="width: 100%; position: absolute; right: 0; top: 1.2em;" class=""><span class="mnl_joueur">[&nbsp;{TOPNAV_MESSAGES_PLAYER}&nbsp;]</span></span>
+            </a>
+            <!-- ENDIF -->
+            <!-- IF TOPNAV_MESSAGES_ALLIANCE && ! TOPNAV_ALLY -->
+            <a href="messages.php?mode=show&message_class={D_MSG_TYPE_ALLIANCE}">
+              <span style="width: 100%; position: absolute; right: 0; top: 2.4em;" class=""><span class="mnl_alliance">[&nbsp;{TOPNAV_MESSAGES_ALLIANCE}&nbsp;]</span></span>
+            </a>
+            <!-- ENDIF -->
+          </div>
+
+        </div>
+        <!-- EOF Nav Bar Middle block -->
+
+        <!-- BOF Nav Bar Right block -->
+        <div class="fr">
+
+          <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
+            <a href="dark_matter.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/DMaterie.jpg" height="100%" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
+              <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_DARK_MATTER}</span>
+            </a>
+          </div>
+
+        </div>
+        <!-- EOF Nav Bar Right block -->
+<!-- /div -->
       </td>
     </tr>
   </tbody></table>
+
   <!-- IF SN_RENDER_NAVBAR_PLANET -->
-    <table align="center">
+  <table align="center">
     <!-- INCLUDE planet_resources -->
-    </table>
+  </table>
   <!-- ENDIF -->
 </div>
 
