--- a/design/templates/OpenGame/page_hint.tpl.html
+++ b/design/templates/OpenGame/page_hint.tpl.html
@@ -3,9 +3,10 @@
 <!-- ELSEIF L_PAGE_HINT -->
   <!-- DEFINE $PAGE_HINT = '{L_PAGE_HINT}' -->
 <!-- ENDIF -->
+
 <!-- IF $PAGE_HINT -->
 <br>
-<table width="519" border="0" cellpadding="0" cellspacing="1">
+<table width="<!-- IF PAGE_HINT_WIDTH -->{PAGE_HINT_WIDTH}<!-- ELSE -->519px<!-- ENDIF -->" border="0" cellpadding="0" cellspacing="1">
   <tr><td class="c">{L_sys_hint}</td></tr>
   <tr><th><div class="hint">{$PAGE_HINT}</div></th></tr>
 </table>
