--- a/design/templates/OpenGame/dark_matter.tpl.html
+++ b/design/templates/OpenGame/dark_matter.tpl.html
@@ -1,10 +1,8 @@
 <h1>{L_sys_dark_matter}</h1>
 <table width="519">
   <tr>
-    <td>
-      <img src="./design/images/DMaterie.jpg" width="120" height="120">
-    </td>
     <td align=justify>
+      <img src="./design/images/DMaterie.jpg" width="120" height="120" class="fr" style="margin: 7px">
       <h2>{L_sys_dark_matter_description_header}</h2>
       {L_sys_dark_matter_description_text}
       <h2>{L_sys_dark_matter_obtain_header}</h2>
@@ -15,7 +13,9 @@
       <!-- IF .payment_module -->
       <form method="POST">
         <h2>{L_sys_dark_matter_purchase}</h2>
-        {L_sys_dark_matter_purchase_text}
+        {L_sys_dark_matter_purchase_text_cost} <span class="ok">{C_payment_lot_size} {L_sys_dark_matter_sh}</span>
+        {L_sys_dark_matter_purchase_text_unit} <span class="notice">{C_payment_lot_price} {C_payment_currency_default}</span>.
+        {L_sys_dark_matter_purchase_text_end}
 
         <h3>{L_sys_dark_matter_purchase_step1}</h3>
 
@@ -23,7 +23,8 @@
           {L_sys_dark_matter_purchase_amount} <span class="ok">{DARK_MATTER}</span>
           <input type="hidden" name="dark_matter" id="dark_matter_amount" value="{DARK_MATTER}">
         <!-- ELSE -->
-          {L_sys_dark_matter_purchase_amount} <span class="notice">{L_sys_dark_matter_purchase_step1_text}</span><br /><br/>
+          <span class="notice">{L_sys_dark_matter_purchase_step1_text}</span><br /><br/>
+          {L_sys_dark_matter_purchase_amount}
           <select name="dark_matter">
             <!-- BEGIN dm_amount -->
               <option value="{dm_amount.VALUE}"<!-- IF dm_amount.VALUE == DARK_MATTER --> selected<!-- ENDIF -->>{dm_amount.VALUE}</value>
