INT-misc-34a10.3: Replaced icons in navbar

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -24,7 +24,7 @@
           <!-- INCLUDE eco_queue -->
           <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;">
             <a href="buildings.php?mode=research">
-              <img style="position: absolute; left: 25%; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/build_tech.png" height="100%" alt="{L_Research}" title="{L_Research}">
+              <img style="position: absolute; left: 25%; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_64x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
               <!-- IF $QUE_NOT_EMPTY -->
               <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
                 <div id="topnav_{QUE_ID}"></div>
@@ -49,7 +49,7 @@
 
           <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
             <a href="flying_fleets.php">
-              <img style="position: absolute; left: 0px; top: 0px;" src="{dpath}gebaeude/{D_TECH_EXPEDITION}.gif" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_expedition_64x64.png" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
               <span style="position: absolute; right: 0; bottom: 0;" id="topnav_expedition_counter_total" class="icon_alpha">
                 <span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}
               </span>
@@ -58,7 +58,7 @@
 
           <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
             <a href="flying_fleets.php">
-              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/icon_fleet_own.png" height="100%" alt="{L_sys_fleets}" title="{L_sys_fleets}">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_fleet_own_64x64.png" height="100%" alt="{L_sys_fleets}" title="{L_sys_fleets}">
               <span style="position: absolute; right: 0; bottom: 0;" id="topnav_fleet_counter_total" class="icon_alpha">
                 <span id='topnav_fleet_counter'>{TOPNAV_FLEETS_FLYING}</span>/{TOPNAV_FLEETS_TOTAL}
               </span>
@@ -67,7 +67,7 @@
 
           <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
             <a href="quest.php">
-              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/icon_quest.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_quest_64x64.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
               <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha">
                 {TOPNAV_QUEST_COMPLETE}/{C_quest_total}
               </span>
@@ -76,7 +76,7 @@
 
           <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
             <a href="messages.php">
-              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/icon_mail_64x64.png" width="100%" alt="{L_Message}" title="{L_Message}">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_mail_64x64.png" width="100%" alt="{L_Message}" title="{L_Message}">
               <div style="position: absolute; left: 0px; bottom: 0px; width: 100%; text-align: center;" class="">
                 <!-- IF TOPNAV_MESSAGES_ALL --><blink>[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</blink><!-- ELSE -->0<!-- ENDIF -->
               </div>
@@ -106,7 +106,7 @@
 
           <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
             <a href="dark_matter.php">
-              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/DMaterie.jpg" height="100%" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_dark_matterie_64x64.png" height="100%" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
               <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_DARK_MATTER}</span>
             </a>
           </div>
