RPG-feat-34a11: Blueprints - access to build units

--- a/design/templates/OpenGame/left_menu.tpl.html
+++ b/design/templates/OpenGame/left_menu.tpl.html
@@ -49,7 +49,8 @@
     <tr><td><a href="flying_fleets.php" id="lm_fleet">{L_imp_fleets}</a></td></tr>
     <tr><td><a href="buildings.php?mode=research" id="lm_techtree">{L_Research}</a></td></tr>
     <tr><td><a href="techtree.php" id="lm_techtree">{L_Technology}</a></td></tr>
-    <tr><td><a href="officer.php">{L_tech[600]}</a></td></tr>
+    <tr><td><a href="officer.php?mode={D_MRC_MERCENARIES}">{L_tech[D_MRC_MERCENARIES]}</a></td></tr>
+    <tr><td><a href="officer.php?mode={D_UNIT_PLANS}">{L_tech[D_UNIT_PLANS]}</a></td></tr>
     <tr><td><a href="artifacts.php">{L_tech[1000]}</a></td></tr>
     <tr><td><a href="market.php">{L_rinok}</a></td></tr>
     <tr><td><a href="galaxy.php?mode=0" id="lm_universe">{L_sys_universe}</a></td></tr>
