--- a/design/templates/OpenGame/server_info.tpl.html
+++ b/design/templates/OpenGame/server_info.tpl.html
@@ -115,7 +115,7 @@
   <tr><td class="c" colspan="2">{L_adm_opt_game_oth_info}</td></tr>
   <!-- IF ALI_BONUS_MEMBERS -->
   <tr>
-    <th>{L_sys_ali_members_bonus}</th> 
+    <th>{L_sys_ali_bonus_members}</th> 
     <th>{ALI_BONUS_MEMBERS}</th>
   </tr>
   <!-- ENDIF -->
