INT-misc-34a11.3: Expedition navbar widget now leads to send fleet page

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -48,7 +48,7 @@
         <div style="display: inline-block; margin: auto;">
 
           <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
-            <a href="flying_fleets.php">
+            <a href="fleet.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_expedition_64x64.png" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
               <span style="position: absolute; right: 0; bottom: 0;" id="topnav_expedition_counter_total" class="icon_alpha">
                 <span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}
